[package]
name = "git-mirror"
version = "0.2.0"
authors = ["Bond_009 <bond.009@outlook.com>"]
edition = "2021"
description = "git-mirror is a command-line program to keep local git mirrors up to date with their origin."

[dependencies.toml]
version = "^0.8"
default-features = false
features = ["parse"]

[dependencies.clap]
version = "^4.5"
default-features = false
features = [
    "cargo",
    "color",
    "help",
    "std",
    "string",
    "usage",
    "wrap_help"
]

[dependencies.git2]
version = "^0.18"
default-features = false
features = ["https"]

[dependencies.git2_credentials]
version = "^0.13"
optional = true
default-features = false

[dependencies.serde]
version = "^1.0"
default-features = false
features = ["derive"]

[features]
default = []
ssh = ["git2/ssh", "git2_credentials"]

[profile.release]
lto = true
